--- a/src/Template/cup/docs/dev/structures/catalog-product.twig
+++ b/src/Template/cup/docs/dev/structures/catalog-product.twig
@@ -169,6 +169,35 @@
                 "signature": "getVolume()",
                 "description": "Вернет габариты товара",
             },
+            {
+                "signature": "addFile(App\\Domain\\Entities\\File $file)",
+                "description": "Добавление файла",
+            },
+            {
+                "signature": "addFiles(array $files)",
+                "description": "Добавление нескольких файлов",
+            },
+            {
+                "signature": "removeFile(App\\Domain\\Entities\\File $file)",
+                "description": "Удаление файла",
+            },
+            {
+                "signature": "removeFiles(array $files)",
+                "description": "Удаление нескольких файлов",
+            },
+            {
+                "signature": "clearFiles()",
+                "description": "Удаление всех файлов",
+            },
+            {
+                "signature": "getFiles($raw = false)",
+                "description": "Получение списка файлов",
+                "args": {"raw": ['true - вернет array', 'false - вернет Collection']},
+            },
+            {
+                "signature": "hasFiles()",
+                "description": "Вернет true если есть файлы",
+            },
         ])
     } %}
 </div>
