--- a/src/Template/cup/docs/dev/structures/user.twig
+++ b/src/Template/cup/docs/dev/structures/user.twig
@@ -93,7 +93,36 @@
                 "signature": "avatar(int $size = 40)",
                 "description": "Cсылка на Gravatar пользователя",
                 "args": {"size": ['размер изображения в px']},
-            }
+            },
+            {
+                "signature": "addFile(App\\Domain\\Entities\\File $file)",
+                "description": "Добавление файла",
+            },
+            {
+                "signature": "addFiles(array $files)",
+                "description": "Добавление нескольких файлов",
+            },
+            {
+                "signature": "removeFile(App\\Domain\\Entities\\File $file)",
+                "description": "Удаление файла",
+            },
+            {
+                "signature": "removeFiles(array $files)",
+                "description": "Удаление нескольких файлов",
+            },
+            {
+                "signature": "clearFiles()",
+                "description": "Удаление всех файлов",
+            },
+            {
+                "signature": "getFiles($raw = false)",
+                "description": "Получение списка файлов",
+                "args": {"raw": ['true - вернет array', 'false - вернет Collection']},
+            },
+            {
+                "signature": "hasFiles()",
+                "description": "Вернет true если есть файлы",
+            },
         ])
     } %}
 </div>
