--- a/src/Template/cup/docs/dev/controller/dynamicpage.twig
+++ b/src/Template/cup/docs/dev/controller/dynamicpage.twig
@@ -5,8 +5,7 @@
     <div>Route: <code class="block pt-3 pb-3">/{args:.*}</code></div>
 
     <p>
-        Один из сложных контроллеров обслуживающий: второстепенные страницы сайта,
-        категории публикаций и публикации.
+        Контроллер обслуживающий: второстепенные страницы сайта, категории публикаций и публикации.
     </p>
 
     <h4>Страница сайта</h4>
