--- a/src/Template/cup/docs/dev/controller/catalog.cart.twig
+++ b/src/Template/cup/docs/dev/controller/catalog.cart.twig
@@ -1,7 +1,7 @@
 <div class="pt-2">
     <h3>Каталог: Корзина</h3>
 
-    <code class="block pt-3 pb-3">\App\Application\Actions\Common\Catalog\CartAction</code>
+    <code class="block pt-3 pb-3">App\Application\Actions\Common\Catalog\CartAction</code>
     <div>Route: <code class="block pt-3 pb-3">/cart</code></div>
 
     <p>Нет переменных</p>
