--- a/src/Template/cup/docs/dev/api/file.twig
+++ b/src/Template/cup/docs/dev/api/file.twig
@@ -9,7 +9,7 @@
     <code class="block pt-3 pb-3">
         curl -X GET \<br />
         -H "Accept: application/json" \<br />
-        "{{ base_url() }}/api/files?ext=png&limit=10"
+        "{{ base_url() }}/api/files?limit=10"
     </code>
 
     <h5>Параметры запроса</h5>
