--- a/src/Template/cup/docs/index.twig
+++ b/src/Template/cup/docs/index.twig
@@ -16,61 +16,63 @@
         <div class="col-md-12">
             <div class="card card-space">
                 <div class="card-body">
-                    <div class="row">
-                        <div class="col-12 col-md-3">
-                            <div class="nav flex-column nav-pills nav-secondary nav-pills-no-bd nav-pills-icons" id="v-pills-tab">
-                                <a class="nav-link active show" id="v-pills-home-tab-icons" data-toggle="pill" href="#docs-main">
-                                    <i class="fas fa-book"></i>
-                                    Общая информация
-                                </a>
-                                <a class="nav-link" id="v-pills-profile-tab-icons" data-toggle="pill" href="#docs-engine">
-                                    <i class="fas fa-book"></i>
-                                    Работа с движком
-                                </a>
-                                <a class="nav-link" id="v-pills-buy-tab-icons" data-toggle="pill" href="#docs-panel">
-                                    <i class="fas fa-book"></i>
-                                    Работа с админпанелью (ЦУП)
-                                </a>
-                                <a class="nav-link" id="v-pills-buy-tab-icons" data-toggle="pill" href="#docs-dev">
-                                    <i class="fas fa-book"></i>
-                                    Разработчикам
-                                </a>
+                    <ul class="nav nav-pills nav-secondary nav-pills-no-bd nav-pills-icons justify-content-center mb-2" id="v-pills-tab">
+                        <li class="nav-item">
+                            <a class="nav-link active show" id="v-pills-home-tab-icons" data-toggle="pill" href="#docs-main">
+                                <i class="fas fa-book"></i>
+                                Общая информация
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="v-pills-profile-tab-icons" data-toggle="pill" href="#docs-engine">
+                                <i class="fas fa-book"></i>
+                                Работа с движком
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="v-pills-buy-tab-icons" data-toggle="pill" href="#docs-panel">
+                                <i class="fas fa-book"></i>
+                                Работа с админпанелью (ЦУП)
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="v-pills-buy-tab-icons" data-toggle="pill" href="#docs-dev">
+                                <i class="fas fa-book"></i>
+                                Разработчикам
+                            </a>
+                        </li>
+                    </ul>
+                    <div class="tab-content" id="v-pills-tabContent">
+                        <div class="tab-pane fade active show" id="docs-main">
+                            <div class="accordion accordion-secondary">
+                                {% include 'cup/docs/main/about.twig' %}
+                                {% include 'cup/docs/main/features.twig' %}
                             </div>
                         </div>
-                        <div class="col-12 col-md-9">
-                            <div class="tab-content" id="v-pills-tabContent">
-                                <div class="tab-pane fade active show" id="docs-main">
-                                    <div class="accordion accordion-secondary">
-                                        {% include 'cup/docs/main/about.twig' %}
-                                        {% include 'cup/docs/main/features.twig' %}
-                                    </div>
-                                </div>
-                                <div class="tab-pane fade" id="docs-engine">
-                                    <div class="accordion accordion-secondary">
-                                        {% include 'cup/docs/engine/requirements.twig' %}
-                                        {% include 'cup/docs/engine/install.twig' %}
-                                        {% include 'cup/docs/engine/update.twig' %}
-                                    </div>
-                                </div>
-                                <div class="tab-pane fade" id="docs-panel">
-                                    <div class="accordion accordion-secondary">
-                                        {% include 'cup/docs/panel/settings.twig' %}
-                                        {% include 'cup/docs/panel/publication.twig' %}
-                                        {% include 'cup/docs/panel/publication-category.twig' %}
-                                        {% include 'cup/docs/panel/page.twig' %}
-                                    </div>
-                                </div>
-                                <div class="tab-pane fade" id="docs-dev">
-                                    <div class="accordion accordion-secondary">
-                                        {% include 'cup/docs/dev/template.twig' %}
-                                        {% include 'cup/docs/dev/template_mail.twig' %}
-                                        {% include 'cup/docs/dev/twig.twig' %}
-                                        {% include 'cup/docs/dev/structures.twig' %}
-                                        {% include 'cup/docs/dev/controller.twig' %}
-                                        {% include 'cup/docs/dev/api.twig' %}
-                                        {% include 'cup/docs/dev/tasks.twig' %}
-                                    </div>
-                                </div>
+                        <div class="tab-pane fade" id="docs-engine">
+                            <div class="accordion accordion-secondary">
+                                {% include 'cup/docs/engine/requirements.twig' %}
+                                {% include 'cup/docs/engine/install.twig' %}
+                                {% include 'cup/docs/engine/update.twig' %}
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="docs-panel">
+                            <div class="accordion accordion-secondary">
+                                {% include 'cup/docs/panel/settings.twig' %}
+                                {% include 'cup/docs/panel/publication.twig' %}
+                                {% include 'cup/docs/panel/publication-category.twig' %}
+                                {% include 'cup/docs/panel/page.twig' %}
+                            </div>
+                        </div>
+                        <div class="tab-pane fade" id="docs-dev">
+                            <div class="accordion accordion-secondary">
+                                {% include 'cup/docs/dev/template.twig' %}
+                                {% include 'cup/docs/dev/template_mail.twig' %}
+                                {% include 'cup/docs/dev/twig.twig' %}
+                                {% include 'cup/docs/dev/structures.twig' %}
+                                {% include 'cup/docs/dev/controller.twig' %}
+                                {% include 'cup/docs/dev/api.twig' %}
+                                {% include 'cup/docs/dev/tasks.twig' %}
                             </div>
                         </div>
                     </div>
