--- a/src/Template/cup/docs/dev/controller-table-data.twig
+++ b/src/Template/cup/docs/dev/controller-table-data.twig
@@ -11,13 +11,13 @@
                     <td>{{ item.field }}</td>
                     <td>{{ item.type }}</td>
                     <td>
-                        {{ item.description|raw }}
+                        {{ item.description|raw }}<br>
                         {% if item.args %}
                             {% for key, desc in item.args %}
                                 {% if key is same as(loop.index0) %}
-                                    <br><b>{{ desc }}</b>
+                                    <b>{{ desc }}</b>;
                                 {% else %}
-                                    <br><b>{{ key }}</b> - {{ desc }}
+                                    <b>{{ key }}</b> - {{ desc }}<br>
                                 {% endif %}
                             {% endfor %}
                         {% endif %}
