add sort fields

--- a/src/Template/cup/docs/dev/controller/catalog.list.twig
+++ b/src/Template/cup/docs/dev/controller/catalog.list.twig
@@ -32,6 +32,16 @@
                 "description": "Индивидуальное поле продукта 4",
             },
             {
+                "field": "country",
+                "type": "mixed",
+                "description": "Страна",
+            },
+            {
+                "field": "manufacturer",
+                "type": "mixed",
+                "description": "Производитель",
+            },
+            {
                 "field": "field5",
                 "type": "mixed",
                 "description": "Индивидуальное поле продукта 5",
@@ -132,6 +142,16 @@
                 "field": "field5",
                 "type": "mixed",
                 "description": "Индивидуальное поле продукта 5",
+            },
+            {
+                "field": "country",
+                "type": "mixed",
+                "description": "Страна",
+            },
+            {
+                "field": "manufacturer",
+                "type": "mixed",
+                "description": "Производитель",
             },
             {
                 "field": "price",
