--- a/src/Template/cup/docs/dev/template_mail.twig
+++ b/src/Template/cup/docs/dev/template_mail.twig
@@ -28,7 +28,7 @@
                 &lt;table align="center" border="0" cellpadding="0" cellspacing="0" width="600" style="border: 1px solid #cccccc; border-collapse: collapse;"&gt;
                     &lt;tr bgcolor="#ffffff"&gt;
                         &lt;td align="center" style="padding: 40px 0 30px 0; color: #153643; font-size: 28px; font-weight: bold; font-family: Arial, sans-serif;"&gt;
-                            &lt;img src="/assets/img/lviv.jpg" alt="Картинка" width="100%" style="display: block;" /&gt;
+                            &lt;img src="{{ base_url() }}/assets/img/lviv.jpg" alt="Картинка" width="100%" style="display: block;" /&gt;
                         &lt;/td&gt;
                     &lt;/tr&gt;
                     &lt;tr&gt;
