--- a/theme/default/catalog.mail.client.twig
+++ b/theme/default/catalog.mail.client.twig
@@ -1,1 +1,92 @@
-{# {{ pre(order) }} #}
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    </head>
+    <body style="background: #f1f1f1; margin: 0; padding: 0;">
+        <table border="0" cellpadding="0" cellspacing="0" width="100%">
+            <tr>
+                <td style="padding: 10px 0 30px 0;">
+                    <table align="center" border="0" cellpadding="0" cellspacing="0" width="600" style="border: 1px solid #cccccc; border-collapse: collapse;">
+                        <tr bgcolor="#ffffff">
+                            <td align="center" style="padding: 40px 0 30px 0; color: #153643; font-size: 28px; font-weight: bold; font-family: Arial, sans-serif;">
+                                <img src="{{ base_url() }}/assets/img/lviv.jpg" alt="Картинка" width="100%" style="display: block;" />
+                            </td>
+                        </tr>
+                        <tr>
+                            <td bgcolor="#ffffff" style="padding: 10px 30px 40px 30px;">
+                                <table border="0" cellpadding="0" cellspacing="0" width="100%">
+                                    <tr>
+                                        <td style="color: #153643;">
+                                            <b style="font-family: Arial, sans-serif; font-size: 24px;">Информация о заказе {{ order.serial }}</b>
+                                            <p>Благодарим вас за заказ</p>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td style="padding: 10px 0 30px 0; color: #153643; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
+                                            <b>Заказчик</b>
+
+                                            <table border="0" cellpadding="0" cellspacing="0" width="100%">
+                                                <tr>
+                                                    <td style="width: 25%">Имя</td>
+                                                    <td style="width: 75%">{{ order.delivery.client }}</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Телефон</td>
+                                                    <td>{{ order.phone }}</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>E-Mail</td>
+                                                    <td>{{ order.email }}</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Адрес доставки</td>
+                                                    <td>{{ order.delivery.address }}</td>
+                                                </tr>
+                                                <tr>
+                                                    <td>Дата доставки</td>
+                                                    <td>{{ order.shipping|date('d.m.Y H:i') }}</td>
+                                                </tr>
+                                            </table>
+
+                                            <h4>Состав заказа</h4>
+
+                                            <table border="0" cellpadding="0" cellspacing="0" width="100%">
+                                                <tr>
+                                                    <td>Название</td>
+                                                    <td style="width: 20%">Цена</td>
+                                                    <td style="width: 20%">Кол-во</td>
+                                                </tr>
+
+                                                {% for product in products %}
+                                                    <tr>
+                                                        <td>{{ product.title }}</td>
+                                                        <td>{{ product.price }}</td>
+                                                        <td>{{ order.list[product.uuid.toString()] }}</td>
+                                                    </tr>
+                                                {% endfor %}
+                                            </table>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td bgcolor="#1269db" style="padding: 10px 10px 10px 10px;">
+                                <table border="0" cellpadding="0" cellspacing="0" width="100%">
+                                    <tr>
+                                        <td style="color: #ffffff; font-family: Arial, sans-serif; font-size: 12px;" width="75%">
+                                            ® <a href="{{ base_url() }}" style="color: #ffffff;">{{ parameter('common_title') }}</a>, {{ df('now', 'Y') }}<br />
+                                        </td>
+                                        <td align="right" width="25%"></td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
+    </body>
+</html>
