--- a/theme/default/catalog.mail.client.twig
+++ b/theme/default/catalog.mail.client.twig
@@ -50,7 +50,7 @@
                                                 </tr>
                                             </table>
 
-                                            <h4>Состав заказа</h4>
+                                            <b>Состав заказа</b>
 
                                             <table border="0" cellpadding="0" cellspacing="0" width="100%">
                                                 <tr>
