--- a/theme/default/catalog.mail.client.twig
+++ b/theme/default/catalog.mail.client.twig
@@ -26,7 +26,6 @@
                                     <tr>
                                         <td style="padding: 10px 0 30px 0; color: #153643; font-family: Arial, sans-serif; font-size: 16px; line-height: 20px;">
                                             <b>Заказчик</b>
-
                                             <table border="0" cellpadding="0" cellspacing="0" width="100%">
                                                 <tr>
                                                     <td style="width: 25%">Имя</td>
@@ -50,8 +49,7 @@
                                                 </tr>
                                             </table>
 
-                                            <b>Состав заказа</b>
-
+                                            <b style="padding: 15px 0 0 0;">Состав заказа</b>
                                             <table border="0" cellpadding="0" cellspacing="0" width="100%">
                                                 <tr>
                                                     <td>Название</td>
