исправления адресов картинок

--- a/theme/default/parts/features.twig
+++ b/theme/default/parts/features.twig
@@ -5,7 +5,7 @@
             <div class="col-md-4 p-0 feature">
                 <div class="feature-inner">
                     <div class="feature-icon">
-                        <img src="img/icons/1.png" alt="#">
+                        <img src="/default/img/icons/1.png" alt="#">
                     </div>
                     <h2>Быстрая оплата</h2>
                 </div>
@@ -13,7 +13,7 @@
             <div class="col-md-4 p-0 feature">
                 <div class="feature-inner">
                     <div class="feature-icon">
-                        <img src="img/icons/2.png" alt="#">
+                        <img src="/default/img/icons/2.png" alt="#">
                     </div>
                     <h2>Отличное качество</h2>
                 </div>
@@ -21,7 +21,7 @@
             <div class="col-md-4 p-0 feature">
                 <div class="feature-inner">
                     <div class="feature-icon">
-                        <img src="img/icons/3.png" alt="#">
+                        <img src="/default/img/icons/3.png" alt="#">
                     </div>
                     <h2>Бесплатная доставка</h2>
                 </div>
