--- a/theme/default/publication.list.twig
+++ b/theme/default/publication.list.twig
@@ -6,6 +6,7 @@
     {{ parent() }}
     <meta name="description" content="{{ page.meta.description }}">
     <meta name="keywords" content="{{ page.meta.keywords }}">
+    <link rel="alternate" type="application/rss+xml" title="{{ parameter('common_title') }}" href="{{ parameter('common_homepage') }}rss/{{ category.address }}">
 {% endblock %}
 
 {% block page %}
