--- a/src/Template/cup/trademaster.twig
+++ b/src/Template/cup/trademaster.twig
@@ -10,7 +10,7 @@
             </div>
             <div class="quick-actions-scroll scrollbar-outer">
                 <div class="quick-actions-items">
-                    <form action="/cup/task/run" method="post" class="row m-0">
+                    <form action="/cup/task/run" method="post" class="row m-0" onsubmit="return confirm('Процесс обновления каталога займет какое-то время! Пожалуйста, убедитесь, что в данный момент не запущен другой процесс обновления! Вы действительно хотите выполнить сейчас?');">
                         <button type="submit" name="task" value="App\Domain\Tasks\TradeMaster\CatalogSyncTask" class="col-12 col-md-12 p-0 btn btn-link">
                             <div class="quick-actions-item">
                                 <i class="fas fa-store"></i>
