offset in pagination

--- a/src/Template/cup/docs/dev/controller/catalog.list.twig
+++ b/src/Template/cup/docs/dev/controller/catalog.list.twig
@@ -112,6 +112,11 @@
                 "type": "int",
                 "description": "Количество на страницу",
             },
+            {
+                "field": "pagination.offset",
+                "type": "int",
+                "description": "Текущая страница (множитель для расчтета отступа)",
+            },
         ])
     } %}
 
@@ -223,6 +228,11 @@
                 "field": "pagination.page",
                 "type": "int",
                 "description": "Количество на страницу",
+            },
+            {
+                "field": "pagination.offset",
+                "type": "int",
+                "description": "Текущая страница (множитель для расчтета отступа)",
             },
         ])
     } %}
