--- a/src/Template/cup/docs/dev/controller/guestbook.twig
+++ b/src/Template/cup/docs/dev/controller/guestbook.twig
@@ -26,6 +26,11 @@
                 "type": "int",
                 "description": "Количество на страницу",
             },
+            {
+                "field": "pagination.offset",
+                "type": "int",
+                "description": "Текущая страница (множитель для расчтета отступа)",
+            },
         ])
     } %}
 </div>
