--- a/src/Template/cup/docs/dev/controller/dynamicpage.twig
+++ b/src/Template/cup/docs/dev/controller/dynamicpage.twig
@@ -51,6 +51,11 @@
                 "type": "int",
                 "description": "Количество на страницу",
             },
+            {
+                "field": "pagination.offset",
+                "type": "int",
+                "description": "Текущая страница (множитель для расчтета отступа)",
+            },
         ])
     } %}
 
