--- a/src/Template/cup/catalog/order/index.twig
+++ b/src/Template/cup/catalog/order/index.twig
@@ -41,7 +41,14 @@
                             <tbody>
                                 {% for item in orders %}
                                     <tr>
-                                        <td>{{ item.serial }}</td>
+                                        <td data-order="{{ item.external_id ? item.external_id : item.date.getTimestamp() }}">
+                                            {{ item.serial }}
+
+                                            {% if item.external_id %}
+                                                <br>
+                                                ID: {{ item.external_id }}
+                                            {% endif %}
+                                        </td>
                                         <td>{{ item.user ? item.user.getName() : item.delivery.client }}</td>
                                         <td>
                                             <span class="badge badge-secondary">{{ reference('/App/Domain/Types/Catalog/OrderStatusType::LIST', item.status) }}</span>
@@ -50,8 +57,8 @@
                                             <pre class="mt-2 mb-2">{{ item.comment|truncate(250) }}</pre>
                                         </td>
                                         <td>{{ item.list|length }}</td>
-                                        <td>{{ item.date|date('d.m.Y H:i') }}</td>
-                                        <td>{{ item.shipping|date('d.m.Y H:i') }}</td>
+                                        <td data-order="{{ item.date.getTimestamp() }}">{{ item.date|date('d.m.Y H:i') }}</td>
+                                        <td data-order="{{ item.shipping.getTimestamp() }}">{{ item.shipping|date('d.m.Y H:i') }}</td>
                                         <td class="text-center">
                                             <div class="btn-group">
                                                 <div class="btn-group dropdown">
